force-app/main/default/objects/JobExecutionLog__c/JobExecutionLog__c.object-meta.xml
<CustomObject>
    <description>Append-only structured log for pipeline and step-level events. Used for observability and post-run diagnostics.</description>
    <label>Job Execution Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Execution Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>