force-app/main/default/objects/JobExecutionLog__c/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <description>Severity level of the log entry.</description>
    <label>Log Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
                <default>true</default>
                <label>INFO</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>