force-app/main/default/objects/JobExecutionLog__c/fields/PipelineRun__c.field-meta.xml
<CustomField>
    <fullName>PipelineRun__c</fullName>
    <description>Pipeline run this log entry belongs to.</description>
    <label>Pipeline Run</label>
    <referenceTo>JobPipelineRun__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>Execution_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>