force-app/main/default/objects/JobExecutionLog__c/fields/StepExecution__c.field-meta.xml
<CustomField>
    <fullName>StepExecution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to the specific step execution this log entry relates to. Null for pipeline-level log entries.</description>
    <label>Step Execution</label>
    <referenceTo>JobStepExecution__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>Execution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>