force-app/main/default/objects/JobExecutionLog__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Exact time the log entry was written.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>