force-app/main/default/objects/JobExecutionLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogLevel__c</columns>
    <columns>PipelineRun__c</columns>
    <columns>StepExecution__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>